--- a/assets/sass/extends/_extends.scss
+++ b/assets/sass/extends/_extends.scss
@@ -11,7 +11,7 @@
     left:0;
 }
 
-.backgroundImageDefault {
+.backgroundCover {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
